force-app/main/default/objects/custom_create3__c/custom_create3__c.object-meta.xml
<CustomObject>
    <label>Custom created object3</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>