force-app/main/default/objects/custom_create3__c/fields/custom_create_3field527__c.field-meta.xml
<CustomField>
    <fullName>custom_create_3field527__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 3field527</label>
    <type>Checkbox</type>
</CustomField>